--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,10 @@
   "rules": {
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": [
+      "error", { "args": "none" }
+    ],
+    "space-before-function-paren": "off",
+    "@typescript-eslint/space-before-function-paren": [
       "error"
     ]
   }
