--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "webpack --watch"
   },
   "devDependencies": {
+    "@types/express": "^4.17.7",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
     "eslint": "^7.7.0",
@@ -21,5 +22,8 @@
     "typescript": "^4.0.2",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
